--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 
 <body>
-    <nav class="navbar">
+    <nav img src="./pics/navbar.jpg" class="navbar">
         <ul class="nav-container">
             <li class="nav-item"><a class="nav-link" href="">
                     <img class="img" src="./icon/File Explorer.ico" alt="">
                     <h3>About</h3>
                 </a></li>
             <li class="nav-item"><a class="nav-link" href="./project details.html">
-                    <img class="img" src="./icon/Notebook Red Notebook.ico" alt="">
+                    <img class="img" src="./icon/Mono Pen.ico" alt="">
 
                     <h3>Project</h3>
                 </a></li>
             <li class="nav-item"><a class="nav-link" href="#">
-                    <img class="img" src="./icon/Mono Pen.ico" alt="">
+                    <img class="img" src="./icon/Notebook Red Notebook.ico" alt="">
                     <h3>Skills</h3>
                 </a></li>
             <li class="nav-item"><a class="nav-link" href="#">
