--- a/project details.html
+++ b/project details.html
@@ -26,5 +26,6 @@
 <marquee behavior="alternate" width="800px" height="500px" loop="100" >
     <img src="./pics/Hampi.jpg" height="200px" widht="200px" border="10px" />
 </marquee>
+<a href="./website">my project </a>
 </body>
 </html>
